# bagcheck

./: pyproject.toml
tests/: pyproject.toml
